fix: RunInfo spacing - correct spacing between current/baseline/bottom border - letter-spacing for titles

--- a/packages/ui/src/css/variables.css
+++ b/packages/ui/src/css/variables.css
@@ -26,6 +26,7 @@
 
   --line-height: 1.66;
   --line-height-heading: 1.33;
+  --line-height-number: 1.2em;
 
   /*
    * Color scheme:
